--- a/dev.html
+++ b/dev.html
@@ -34,6 +34,28 @@
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato&amp;subset=latin,latin-ext'>
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
   
+	
+	<style>
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background:#2D2D30; 
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(to top, rgba(239,140,53),rgb(218,39,73), rgba(189,24,133));
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #2D2D30; 
+}
+</style>
+
+	
+	
 <style>
 .navbar-brand { padding: 0px; }
 .navbar-brand>img { height: 100%; padding: 15px; width: auto; }
