--- a/dev.html
+++ b/dev.html
@@ -183,7 +183,16 @@ ul.breadcrumb li a:hover {
 
 <div id="piso">
   
-  <h3>Coding & Programming  & Development</h3> 
+<style>
+ddaa {
+  font-size: 24px;
+  background: -webkit-linear-gradient(rgba(239,140,53),rgb(218,39,73), rgba(189,24,133));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+</style>
+<ddaa><b>Coding & Programming & Development</b></ddaa>
+<br>
   
   
 <!--
