--- a/Qindex.html
+++ b/Qindex.html
@@ -1111,6 +1111,43 @@ function showSlides(n) {
 -->
 <!-- <img src="https://live.staticflickr.com/5670/22216562610_61c1f6febe_c.jpg" class="img-responsive" style="width:100%"> -->
 
+<div id="grad1" style="color:white;background-image: linear-gradient(to right, rgba(179, 0, 12), rgba(228, 0, 16), rgba(45,45,48), rgba(45,45,48));">
+ New year: <x id="newyear" style="font-size:15px"></x> </div>
+ 
+<script>
+// Set the date we're counting down to
+var countDownDate = new Date("Jan 1, 2022 00:00:00").getTime();
+
+// Update the count down every 1 second
+var countdownfunction = setInterval(function() {
+
+  // Get todays date and time
+  var now = new Date().getTime();
+  
+  // Find the distance between now an the count down date
+  var distance = countDownDate - now;
+  
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+  
+  // Output the result in an element with id="demo"
+  document.getElementById("newyear").innerHTML = days + "d " + hours + "h "
+  + minutes + "m " + seconds + "s ";
+  
+  // If the count down is over, write some text 
+  if (distance < 0) {
+    clearInterval(countdownfunction);
+    document.getElementById("newyear").innerHTML = "EXPIRED";
+  }
+}, 1000);
+</script>
+
+
+	 
+	 
 
 <footer class="container-fluid text-center">
  
