--- a/plus.ap.html
+++ b/plus.ap.html
@@ -1,17 +1,17 @@
-<!-- SpecialPage ᖰ𝘭υ⟆
+<!--========================================================================== 
+      ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █ 
 
-  ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
-  ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
-  ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+     SpecialPage ᖰ𝘭υ⟆ Updated: v2.2.1 25dec21 
+     Welcome in my personal website 100% HTML |  Hosted by Github
+     Handcrafted With ❤ (CC)-By: Pᴀᴘᴀsᴘʏʀᴏᴜ Aʟᴇxᴀɴᴅʀᴏs ॐ ☯ ☸
+     🅐🅛🅔🅧🅐🅝🅓🅡🅞🅢 🅗🅤🅑  
 
 ██████  ██      ██    ██ ███████ 
 ██   ██ ██      ██    ██ ██      
 ██████  ██      ██    ██ ███████ 
 ██      ██      ██    ██      ██ 
 ██      ███████  ██████  ███████ 
-
-  Welcome in my personal website 100% Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou and Hosted by Github 
-  -->
+==========================================================================   -->
   
 <!DOCTYPE html>
 <html>
@@ -136,35 +136,15 @@ Developers:Day:Digital 24 & 25 Ιουνίου 2021</a>
   
   
   
+  <!-- 
+██████  ██      ██    ██ ███████ 
+██   ██ ██      ██    ██ ██      
+██████  ██      ██    ██ ███████ 
+██      ██      ██    ██      ██ 
+██      ███████  ██████  ███████ 
+-->
   
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
- 
+
   
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
@@ -262,6 +242,11 @@ Are You Lost In The World Like Me</p>
 <iframe  src="https://hdvid.tv/embed-h5spc8x60v0u.html" width="49%" height="100%" > </iframe>
 <iframe  src="https://www.youtube.com/embed/oU-BgkgODyA" width="49%" height="100%" > </iframe>
 
+
+<p><b><font color="#FF5733">Alexis Grigoropoulos 6 DEC 2008</font></b> Δύο αστυνομικοί δολοφονούν εν ψυχρώ ένα νεαρό αγόρι και στη συνέχεια αποχωρούν με το περιπολικό τους και συνομιλούν επί ώρα μέσω ασυρμάτου με το κέντρο άμεσης δράσης λέγοντας ψέματα.</p>
+<iframe  src="https://www.youtube.com/embed/L7qU0YEEnZs" width="49%" height="100%" > </iframe>
+<iframe  src="https://www.youtube.com/embed/di94OhOSphk" width="49%" height="100%" > </iframe>
+
 </div>
 </div>
 
@@ -276,9 +261,10 @@ Are You Lost In The World Like Me</p>
  <iframe  src="https://www.youtube.com/embed/yzvFTPM21bs" width="24%" height="100%" > </iframe>
  <iframe  src="https://www.youtube.com/embed/bmP9ZQx9a3c" width="24%" height="100%" > </iframe>
  <iframe  src="https://www.youtube.com/embed/vgc45flSp9o" width="24%" height="100%" > </iframe>
- 
-  <iframe  src="https://www.youtube.com/embed/L0xdHHDSy7U" width="24%" height="100%" > </iframe>
-   <iframe  src="https://www.youtube.com/embed/2sx1h14Sl8M" width="24%" height="100%" > </iframe>   
+ <iframe  src="https://www.youtube.com/embed/L0xdHHDSy7U" width="24%" height="100%" > </iframe>
+ <iframe  src="https://www.youtube.com/embed/2sx1h14Sl8M" width="24%" height="100%" > </iframe>   
+ <iframe  src="https://www.youtube.com/embed/SeMzW2psBvA" width="24%" height="100%" > </iframe>      
+  
    
  <p>σύντομα περισοτερα...</p>
 
@@ -297,6 +283,21 @@ Are You Lost In The World Like Me</p>
     <!-- Grid for photos -->
   <p>"The Web without links is like a world without roads." <font color="#FF5733"><a href="https://saveyourinternet.eu/">#saveyourinternet</a> </font>  </p>
   
+  
+  
+   <span class="w3-tag"  style="
+   font-size:12px;  
+background: rgb(104,52,139);
+background: linear-gradient(to top, rgba(104,52,139,0.938813025210084) 0%, rgba(0,0,0,1) 34%, rgba(0,0,0,1) 69%, rgba(162,54,54,0.9500175070028011) 100%);
+   border-radius: 12px; 
+   border: none;  
+   colour: #fff;  
+   text-align: center; 
+   text-decoration: none; 
+   cursor: pointer; 
+   
+   "><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/ap.contact.html';"><b>SEND MESSAGE</b></a></span>
+  <br><br>
   
 <style>
 .accordion2 {
@@ -347,6 +348,20 @@ Are You Lost In The World Like Me</p>
 <button class="accordion2">ταξική πολιτική και συνδικαλισμος (tech)
 </button>
 <div class="panel">
+
+<a href="https://mera25.gr/">mera25</a>  | 
+<a href="https://diem25.org/en/">diem25</a>  | 
+<!--
+https://www.sekonline.gr/
+https://antarsya.gr/
+https://www.kke.gr/
+https://www.pirateparty.gr/
+http://www.kkeml.gr/
+https://www.m-lkke.gr/
+https://www.kne.gr/
+-->
+<br>
+
 <a href="https://gsee.gr/ ">gsee</a>  | 
 <a href="http://www.eka.org.gr/ ">eka</a>  | 
 <a href="https://www.setip.gr/ ">setip</a>  | 
@@ -397,14 +412,18 @@ https://athens.indymedia.org/author/%CE%A3%CF%85%CE%BD%CE%AD%CE%BB%CE%B5%CF%85%C
 <a href="https://nutritionhome.gr/news/">nutritionhome</a>  | 
 <a href="https://mariamanganari.gr/%CE%BF%CE%B4%CE%B7%CE%B3%CF%8C%CF%82-mindfulness-%CE%B3%CE%B9%CE%B1-%CE%B1%CF%81%CF%87%CE%AC%CF%81%CE%B9%CE%BF%CF%85%CF%82-%CF%84%CE%BF-%CF%84%CE%B9-%CF%84%CE%BF-%CF%80%CF%8E%CF%82-%CE%BA%CE%B1/
 ">Οδηγός Mindfulness</a>  | 
- <br>       
+<a href="https://www.zencenterathens.com">zencenterathens</a>  |  
+<a href="https://www.awakengr.com/">awakengr</a>  |  
+<a href="https://www.mindfulness360.net/">mindfulness360</a>  |  
+<a href="https://linktr.ee/successhype">successhype</a>  | 
+<a href="https://courses.angelosleventis.gr">angelosleventis</a>  | 
+<a href="https://manosdaskalakis.com">manosdaskalakis</a>  | 
+
+<br>       
 
 <!--
 https://www.iatronet.gr/ygeia/psyxiki-ygeia/article/57052/ti-einai-to-mindfulness-kai-pws-efarmozetai.html
 
-https://www.mindfulness360.net/home
-
-https://successhype.com/
 -->
 
 </div>
@@ -509,6 +528,7 @@ https://successhype.com/
         https://www.babbel.com/
         -->    
 	<br><span class="w3-red">eBOOKS</span>
+		<a href="https://pernoamparizabooks.wordpress.com">pernoamparizabooks</a>| 
 		<a href="https://free-ebooks.gr/">ebooks</a>| 
         <a href="http://www.openbook.gr/">openbook</a>| 
         <a href="http://ebooks.edu.gr/new/">edu</a>| 
@@ -519,6 +539,9 @@ https://successhype.com/
         <!-- 
         -->
 <!-- //////// NEWS //////// --><br><span class="w3-tag w3-black">NEWS</span>
+
+        <a href="https://rwf-archive.gr/">rwf</a>| 
+
 <!--	<br><span class="w3-red"> NEWSPAPERS </span>
 		<a href="http://www.efsyn.gr/epistimi"> efsyn</a> | 
 		<a href="https://www.naftemporiki.gr/techscience">naftemporiki</a> | 
@@ -1078,6 +1101,16 @@ https://forebears.io/
             </iframe>
 </div>
 -->
+	  
+	    
+<!--
+
+  ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+  ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+  ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+-->
+  
+	  
 <script>
 var acc = document.getElementsByClassName("accordion2");
 var i;
@@ -1155,6 +1188,3 @@ Data Science με Python
 Σχεδιασμός Ιστοσελίδων με το Bootstrap
 
 -->
-
-
-
