--- a/plus.ap.html
+++ b/plus.ap.html
@@ -1,7 +1,7 @@
 <!--========================================================================== 
       ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █ 
 
-     SpecialPage ᖰ𝘭υ⟆ Updated: v2.2.1 25dec21 
+     SpecialPage ᖰ𝘭υ⟆ Updated: v2.2.2 24Jan21 
      Welcome in my personal website 100% HTML |  Hosted by Github
      Handcrafted With ❤ (CC)-By: Pᴀᴘᴀsᴘʏʀᴏᴜ Aʟᴇxᴀɴᴅʀᴏs ॐ ☯ ☸
      🅐🅛🅔🅧🅐🅝🅓🅡🅞🅢 🅗🅤🅑  
@@ -15,7 +15,7 @@
   
 <!DOCTYPE html>
 <html>
-  <title>AlexandrosHUB + </title>
+  <title>𝙰𝚕𝚎𝚡𝚊𝚗𝚍𝚛𝚘𝚜𝙷𝚞𝚋 𝗣𝗟𝗨𝗦 🚀</title>
   <!--/new/--><link rel="icon" href="https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" type="image/png">
   <!--  /////// meta information  /////// -->
   <meta charset="UTF-8">
