--- a/plus.ap.html
+++ b/plus.ap.html
@@ -2,7 +2,7 @@
 <!--========================================================================== 
       ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █ 
 
-     SpecialPage ᖰ𝘭υ⟆ Updated: v2.2.1 25dec21 
+     SpecialPage ᖰ𝘭υ⟆ Updated: v2.2.2 * 25.1.22 
      Welcome in my personal website 100% HTML |  Hosted by Github
      Handcrafted With ❤ (CC)-By: Pᴀᴘᴀsᴘʏʀᴏᴜ Aʟᴇxᴀɴᴅʀᴏs ॐ ☯ ☸
      🅐🅛🅔🅧🅐🅝🅓🅡🅞🅢 🅗🅤🅑  
