--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 ==========================================================================   -->
 <!DOCTYPE html>
 <html lang="el">
-  <title>>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 ▹ 𝑨𝒖𝒕𝒐𝒎𝒂𝒕𝒊𝒐𝒏𝒔 𝑛' 𝑚𝑜𝑟𝑒</title>
+  <title>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 ▹𝑨𝒖𝒕𝒐𝒎𝒂𝒕𝒊𝒐𝒏𝒔 𝑛' 𝑚𝑜𝑟𝑒</title>
   <link rel="icon" href="https://64.media.tumblr.com/95f2ae6a166a2ce9e4feabdbd0e03e2c/3645bebb47f6e366-00/s400x600/d202567175a6296a1d7d0e497f4e89f514ae03db.png" type="image/png">
   <head>
   <!--  /////// meta information  /////// -->
