--- a/ap.contact.html
+++ b/ap.contact.html
@@ -1,3 +1,14 @@
+ 
+<!DOCTYPE html>
+<html>
+  <title>𝙰𝚕𝚎𝚡𝚊𝚗𝚍𝚛𝚘𝚜𝙷𝚞𝚋 𝗰𝗼𝗻𝘁𝗮𝗰𝘁</title>
+  <!--/2022/--><link rel="icon" href="https://64.media.tumblr.com/95f2ae6a166a2ce9e4feabdbd0e03e2c/3645bebb47f6e366-00/s400x600/d202567175a6296a1d7d0e497f4e89f514ae03db.png" type="image/png">
+
+  <meta charset="UTF-8">
+  
+  
+  
+  
 
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato&amp;subset=latin,latin-ext'>
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
@@ -40,7 +51,7 @@ body {font-family: "Lato";}
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand text-hide" href="http://disputebills.com">AlphaPi
+        <a class="navbar-brand text-hide" href="https://alexandroshub.github.io/">AlphaPi
         </a>
       </div>
       <div id="navbar6" class="navbar-collapse collapse">
@@ -93,13 +104,7 @@ body {font-family: "Lato";}
   ==========================================================================
   -->
   
-<!DOCTYPE html>
-<html>
-      
-  <title>Papaspyrou | Contact</title>
-  <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png" />
-  <meta charset="UTF-8" />
-  
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" />
