--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+
 <!-- SpecialPage contact v.alien2
 ud 3.2.21
 
@@ -9,7 +10,7 @@ Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou
 -->
 <!DOCTYPE html>
 <html>
-         <meta http-equiv="Refresh" content="2;url=https://alexandroshub.github.io/contcard">
+         <meta http-equiv="Refresh" content="1;url=https://alexandroshub.github.io/ap.contact">
 
   
   <title>Papaspyrou | Contact</title>
@@ -171,7 +172,7 @@ Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou
           <p>Θα ήθελα πολύ να ακούσω τη γνώμη και τις προτάσεις σου. <br>mail: alexandroshub@protonmail.com
           </p>
           </div>
-    
+  <!--  
     <div class="w3-row">
       <div class="w3-container w3-half">
         <div class="w3-center w3-padding-32">
@@ -180,7 +181,7 @@ Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou
               Φόρτωση…
             </iframe>
             <br />
-          </p>
+          </p> -->
           <!--
 <h5>SOCIAL</h5><p>
 <a class="w3-button w3-light-grey" href="https://twitter.com/A_Papaspyrou"><i class="fa fa-twitter"></i></a>
@@ -204,6 +205,8 @@ Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou
 -->
         </div>
       </div>
+      
+      <!--
       <div class="w3-container w3-half">
         <div class="w3-center w3-padding-32">
           <div class="w3-content" style="max-width: 400px;">
@@ -232,7 +235,7 @@ this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your pag
         </div>
       </div>
     </div>
-
+-->
     <footer style="background-color: #0f1724; color: #d1d3d8;">
       <style>
         #blogkgrady {
