--- a/dev.html
+++ b/dev.html
@@ -1,10 +1,11 @@
 
+
 <!--    ==========================================================================
   ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
   ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
   ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
   
-      Updated: 1.2.22
+      Updated: 2.2.22
       Website: https://alexandroshub.github.io
       Contact email: alexandroshub@protonmail.com
   
@@ -32,8 +33,7 @@
   
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato&amp;subset=latin,latin-ext'>
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
-  
-
+<!--fontawesome--><script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 <style>/* AlphaPi bar */
 /* width */ ::-webkit-scrollbar {width: 10px;}
@@ -149,7 +149,7 @@ body {font-family: "Lato";}
       background-position: center;
       background-size: cover;
       background-image:linear-gradient(to bottom, rgba(34, 34, 34, 1) ,rgba(255, 0, 0, 0),rgba(255, 0, 0, 0), rgba(0, 0, 0, 1)),  url("https://static.wixstatic.com/media/b44604_48e7ea3da73a4f31bdd82cc86d691b73~mv2.gif");
-      min-height: 50%;
+      min-height: 30%;
       }
     </style>
     <header class="bgimg w3-display-container w3-grayscale-min" id="home">
@@ -260,12 +260,6 @@ ddaa {
 
 <a href="https://alexandroshub.github.io/cpp"><button class="bu5on"><b>C C++ C#</b></button></a>
 
-
-<!--
-<img src="https://d3g2zn2nj8ejos.cloudfront.net/images/elements/lessons/paper_clip.svg" width="24">
-<img src="https://d3g2zn2nj8ejos.cloudfront.net/images/elements/articles/share.svg" width="24">
-<img src="https://d3g2zn2nj8ejos.cloudfront.net/images/elements/lessons/download.svg" width="24">
--->
 <!--
 Matlab
 NI - labview
@@ -277,7 +271,14 @@ Javascript
 PHP
 React
 Swift
+-->
 
+<!--
+<img src="https://d3g2zn2nj8ejos.cloudfront.net/images/elements/lessons/paper_clip.svg" width="24">
+<img src="https://d3g2zn2nj8ejos.cloudfront.net/images/elements/articles/share.svg" width="24">
+<img src="https://d3g2zn2nj8ejos.cloudfront.net/images/elements/lessons/download.svg" width="24">
+-->
+<!--
 *
 Ανάπτυξη διαδικτυακών εφαρμογών (Web Development) με χρήση Python.
 Δημιουργία δυναμικών ιστοσελίδων με χρήση Python στο BackEnd
@@ -445,7 +446,7 @@ Data Science με Python
           </div>
 
           <div class="col-xs-6 col-md-3">
-         	<h6>Categories</h6>
+         	<h6>Portfolio</h6>
             <ul class="footer-links">
             
              <li><a href=""><i class="far fa-file-alt" style="color: green;"></i><b> Publication</b>  'Η εξέλιξη των Η/Υ'</a></li>
@@ -464,7 +465,10 @@ Data Science με Python
           <div class="col-xs-6 col-md-3">
             <h6>Quick Links</h6>
             <ul class="footer-links">
-             <li><a href="https://alexandroshub.github.io/dev"><i class="fas fa-code"style="color: purple;"></i><b> Dev</b>project</a></li>
+             <li><a href="https://alexandroshub.github.io/dev"><i class="far fa-paper-plane"style="color: red;"></i><b> Dev</b>project</a></li>
+             
+              <li><a href="https://alexandroshub.wordpress.com"><i class="far fa-paper-plane" style='color:red'></i><b> Blog</b></a></li>
+              <li><a href="https://alexandroshub.github.io/contact"><i class="far fa-paper-plane" style='color:red'></i><b> Contact</b></a></li>
             </ul>
           </div>
         </div>
