--- a/stem.html
+++ b/stem.html
@@ -1,10 +1,9 @@
-
 <!--    ==========================================================================
   ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
   ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
   ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
   
-      Updated: 22.11.21
+      Updated: 11.2.22
       Website: https://alexandroshub.github.io
       Contact email: alexandroshub@protonmail.com
   
@@ -17,9 +16,8 @@
 
 <!DOCTYPE html>
 <html>
-  <title>Papaspyrou | STEAM </title>
-  <!--/new logo/-->
-  <link rel="icon" href="https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" type="image/png">
+	 <title>𝙰𝚕𝚎𝚡𝚊𝚗𝚍𝚛𝚘𝚜𝙷𝚞𝚋 STEAM 🚀</title>
+  <!--/2022/--><link rel="icon" href="https://64.media.tumblr.com/95f2ae6a166a2ce9e4feabdbd0e03e2c/3645bebb47f6e366-00/s400x600/d202567175a6296a1d7d0e497f4e89f514ae03db.png" type="image/png">
   <style>/* style information */
     body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     body, html {height: 100%; line-height: 1.8;}
@@ -225,7 +223,10 @@ https://eduact.org/
 https://www.o3.gr/lego-education-academy/
 </div>
 <div id="two" class="w3-container menu w3-padding-48 w3-card">
-
+<a href="https://education.makeblock.com/"><button class="bu5on"><b>education.makeblock</b></button></a>
+<a href="https://www.arduino.cc/education"><button class="bu5on"><b>arduino education</b></button></a>
+<a href="https://education.lego.com/en-us/"><button class="bu5on"><b></b>education lego</button></a>
+<a href="https://eduk8.gr/lego-education/"><button class="bu5on"><b></b>eduk8 legoeducation</button></a>
 </div>  
 <div id="tre" class="w3-container menu w3-padding-48 w3-card">
 xcv
