--- a/stem.html
+++ b/stem.html
@@ -40,6 +40,61 @@
 <link rel="mask-icon" type="image/x-icon" href="" color="#111" />
 -->
 
+	
+<style>
+
+/* AlphaPi Button */
+
+.bu5on {
+  border-radius: 12px;
+  background-color: #000;
+  background-image: linear-gradient(to top, rgba(239,140,53),rgb(218,39,73), rgba(189,24,133));
+  border: none;
+  color: white;
+  padding: 13px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 3px 2px;
+  cursor: pointer;
+}
+
+
+/* AlphaPi hr */
+
+hqr { 
+  display: block;
+  margin-top: 0.2em;
+  margin-bottom: 0.2em;
+  margin-left: 1;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 4px;
+  width:70%;
+  height:3px;
+  border-width:0;
+  background-image: linear-gradient(to right, rgba(239,140,53),rgb(218,39,73), rgba(189,24,133));
+  border-radius: 25px;} 
+
+/* AlphaPi text */
+
+ddaa {
+  font-size: 34px;
+  background: -webkit-linear-gradient(rgba(239,140,53),rgb(218,39,73), rgba(189,24,133));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* AlphaPi bar */
+
+/* width */ ::-webkit-scrollbar {width: 10px;}
+/* Track */ ::-webkit-scrollbar-track {background:#2D2D30;}
+/* Handle */::-webkit-scrollbar-thumb {background-image: linear-gradient(to top, rgba(239,140,53),rgb(218,39,73), rgba(189,24,133));}
+/* Handle on hover */ ::-webkit-scrollbar-thumb:hover {background: #2D2D30;}
+</style>
+
+
 
 <style>
 .navbar-brand { padding: 0px; }
