--- a/index.html
+++ b/index.html
@@ -1147,6 +1147,8 @@ var countdownfunction = setInterval(function() {
   
   <a class="facebook" href="https://www.facebook.com/alexandroshub/"><i class="fa fa-facebook"></i></a>  |  <a class="dribbble" href="https://www.instagram.com/alexandroshub/"><i class="fa fa-instagram"></i></a>
   </p>
+	<div id="sfc7q6zq2w7sm1ly1sbe4p3b2nzbs31tp9x"></div><script type="text/javascript" src="https://counter2.stat.ovh/private/counter.js?c=7q6zq2w7sm1ly1sbe4p3b2nzbs31tp9x&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="free web counter"><img src="https://counter2.stat.ovh/private/freecounterstat.php?c=7q6zq2w7sm1ly1sbe4p3b2nzbs31tp9x" border="0" title="free web counter" alt="free web counter"></a></noscript>
+	
 </footer>
 
  <!--
