--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █ 
             
       CC-BY international 4 [2011-2022] Alexandros Papaspyrou
-      Updated: v2.2.1 * 25.1.22
+      Updated: v2.2.1 * 22.2.22 analitics
       Website: https://alexandroshub.github.io
       Contact: 	a-papaspyrou@outlook.com.gr  |  Mob: 	+30 694 054 8867
       Contact: alexandroshub@protonmail.com    //    a-papaspyrou@outlook.com.gr | alexispapy@gmail.com | alexispapy@outlook.com | papaspyrou.alexandros@gmail.com
@@ -25,7 +25,8 @@
 <html lang="el">
   <title>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 𝑎𝑢𝑡𝑜𝑚𝑎𝑡𝑖𝑜𝑛𝑠 𝑛' 𝑚𝑜𝑟𝑒</title>
   <link rel="icon" href="https://64.media.tumblr.com/95f2ae6a166a2ce9e4feabdbd0e03e2c/3645bebb47f6e366-00/s400x600/d202567175a6296a1d7d0e497f4e89f514ae03db.png" type="image/png">
-  <head>
+  <head>	  
+<!-- Global site tag (gtag.js) - Google Analytics --> <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script><script> window.dataLayer = window.dataLayer || [];  function gtag(){dataLayer.push(arguments);}  gtag('js', new Date());  gtag('config', 'UA-128580719-1');</script>
   <!--  /////// meta information  /////// -->
     <meta charset="UTF-8">
     <meta name="author" content="Alexandros Papaspyrou">
