--- a/2022projects.html
+++ b/2022projects.html
@@ -14,7 +14,11 @@
      Handcrafted With ❤ (CC)-By: Pᴀᴘᴀsᴘʏʀᴏᴜ Aʟᴇxᴀɴᴅʀᴏs
      🅐🅛🅔🅧🅐🅝🅓🅡🅞🅢 🅗🅤🅑   
     ==========================================================================  -->
+<!--
+”Πού είναι η όλη η σοφία που χάσαμε μέσα στη γνώση; Πού είναι όλη η γνώση που χάσαμε μέσα στην πληροφόρηση;” - Τόμας Έλιοτ
 
+”Ὁ βίος βραχὺς, ἡ δὲ τέχνη μακρὴ, ὁ δὲ καιρὸς ὀξὺς, ἡ δὲ πεῖρα σφαλερὴ, ἡ δὲ κρίσις χαλεπή.” - Ιπποκράτης
+-->
 <!DOCTYPE html>
 <html>
  <title>𝙰𝚕𝚎𝚡𝚊𝚗𝚍𝚛𝚘𝚜𝙷𝚞𝚋 Portfolio</title>
