--- a/ap.contact.html
+++ b/ap.contact.html
@@ -1,4 +1,5 @@
 
+
  
 <!DOCTYPE html>
 <html>
@@ -151,7 +152,31 @@ body {font-family: "Lato";}
   
   ==========================================================================
   -->
-  
+      <!--  ////////////////////////// messenger_platform  ////////////////////////// -->
+    <!-- Load Facebook SDK for JavaScript -->
+    <div id="fb-root"></div>
+    <script>
+      (function (d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/el_GR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1";
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, "script", "facebook-jssdk");
+    </script>
+    <!-- Your customer chat code -->
+    <div
+      class="fb-customerchat"
+      attribution="setup_tool"
+      page_id="1610585155641169"
+      theme_color="#72c494"
+      logged_in_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα."
+      logged_out_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα."
+    ></div>
+    <!--  ////////////////////////// messenger_platform  ////////////////////////// -->
+    
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
