--- a/vip.html
+++ b/vip.html
@@ -1,8 +1,4 @@
-
-
-
-
-<!-- very important page 2020   -->
+<!-- very important page 2022   -->
 
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -52,17 +48,18 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 
 <!-- BAR Section //////////////////////////////////////////////////////////-->
 <div class="w3-bar w3-dark-grey  w3-large ">
-<a class="w3-bar-item">Control Panel</a>
+<a class="w3-bar-item">VIP</a>
 <a href="https://alexandroshub.github.io/index" class="w3-green w3-bar-item w3-button  w3-right"><i class="fa fa-sign-in w3-margin-right" ></i><b>HOME
 </b></a>
 </div><!-- ////////////////////////////////////////////////////////// -->
 
+<!--
 <p><span id="datetime"></span></p>
 <script>
 var dt = new Date();
 document.getElementById("datetime").innerHTML = (("0"+dt.getDate()).slice(-2)) +"."+ (("0"+(dt.getMonth()+1)).slice(-2)) +"."+ (dt.getFullYear()) +" "+ (("0"+dt.getHours()).slice(-2)) +":"+ (("0"+dt.getMinutes()).slice(-2));
 </script>
-<iframe width="100" height="30" src="https://vclock.com/embed/#theme=0&ampm=1&showdate=1&sound=bells" frameborder="0" allowfullscreen></iframe>
+-->
 
 
 <script async src="https://cse.google.com/cse.js?cx=da9cf2b4ec807d8de"></script>
@@ -73,7 +70,26 @@ document.getElementById("datetime").innerHTML = (("0"+dt.getDate()).slice(-2)) +
 <div style="background-color: #008080; color: #7FFFD4; padding:12px 12px" id="text">
 
 <div class="w3-row-padding">
-xxx
+
+
+
+
+<b><a href="https://infocomworld.gr/" target="_blank">24ο Συνέδριο InfoCom World
+Fiber & 5G Highways: DigitAll Greece!</a> </b>
+<br>📇 29,30   November 2022 <br>📍 Caravel Hotel
+
+<hr>
+<b><a href="https://www.comsol.gr/4FF40A01.el.aspx" target="_blank">10th Data Center Infrastructures Networking & Services Conference</a> </b>
+<br>📇 4 November 2022 <br>📍 Domotel
+<hr>
+<b><a href="https://esguniverse.gr/" target="_blank">1o ESG Universe Forum ESG: The Corporate (R)evolution!</a> </b>
+<br>📇 22 November 2022 <br>📍 ONLINE EVENT
+<hr>
+<b><a href="https://e-govforum2022.e-expo.gr/" target="_blank">#12ο e-Government Forum, 12o DigitalHealth Care, 8o DPO & ICT Security World </a> </b>
+<br>📇 2,3 November 2022 <br>📍 Caravel Hotel
+
+
+
 </div></div>        
   
   
@@ -85,10 +101,10 @@ xxx
   
   
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<!--
 <button onclick="openFullscreen();">Open Fullscreen</button>
 <button onclick="closeFullscreen();">Close Fullscreen</button>
-
+-->
 <script>
 var elem = document.documentElement;
 function openFullscreen() {
@@ -113,9 +129,6 @@ function closeFullscreen() {
 </script>
 
 
-
-  
-  
   
   
   
