--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ h3 {
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://alexandroshub.github.io/porto.ap.html">PORTFOLIO</a></li>
-        <li><a href="https://alexandroshub.github.io/ap.contact.html">CONTACT</a></li>
+        <li><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAANAAQIREL5UNjlHSFBIMUFHTVNMTTFNN1o0M1FWMFdaMi4u">CONTACT</a></li>
           <li><a href="https://alexandroshub.github.io/plus.ap.html">PLUS</a></li>
       </ul>
     </div>
