--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       Updated: v2.3.3 * 10.3.23 
       Website: https://alexandroshub.github.io
       Contact: 	a-papaspyrou@outlook.com.gr  |  Mob: 	+30 694 054 8867
-      Contact: alexandroshub@protonmail.com  | alexispapy@gmail.com
+      Contact: alexandroshub@protonmail.com  | alexispapy@gmail.com  |  https://discord.gg/zSEH54w8nM
       Welcome in my personal website Handcrafted With ❤ (CC)-By: Pᴀᴘᴀsᴘʏʀᴏᴜ Aʟᴇxᴀɴᴅʀᴏs Hosted by Github
      
 	▄▀█ █░░ █▀▀ ▀▄▀ ▄▀█ █▄░█ █▀▄ █▀█ █▀█ █▀   █░█ █░█ █▄▄
