--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!--==========================================================================
 
 	  ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █  🅐🅛🅔🅧🅐🅝🅓🅡🅞🅢 🅗🅤🅑  
             
       CC-BY international 4 [2011-2023] Alexandros Papaspyrou
-      Updated: v2.3.3 * 23.3.23 
+      Updated: v2.3.3 * 1.5.23 
       Website: https://alexandroshub.github.io
       Contact: 	a-papaspyrou@outlook.com.gr  |  Mob: 	+30 694 054 8867
       Contact: alexandroshub@protonmail.com  | alexispapy@gmail.com  |  https://discord.gg/zSEH54w8nM
@@ -145,8 +144,12 @@
   .navbar li a, .navbar .navbar-brand { 
     color: #d5d5d5 !important;
   }
+  
+  
   .navbar-nav li a:hover {
-    color: #fff !important;
+  color: #fff !important;
+  background-image: linear-gradient(to right, rgba(239,140,53),rgb(218,39,73), rgba(189,24,133));
+  border-radius: 1px
   }
   .navbar-nav li.active a {
     color: #fff !important;
@@ -229,8 +232,8 @@ body, html {
 }
 .bgimg-1 {
   background-image: url("https://i.pinimg.com/originals/4a/ae/bf/4aaebf41f6b1f0a10991689cf0e90a19.gif");
-  min-height: 60%;
-   -webkit-filter: grayscale(80%);
+  min-height: 100%;
+   -webkit-filter: grayscale(70%);
     filter: grayscale(50%); /* make all photos black and white */ 
 }
 
@@ -323,12 +326,12 @@ h3 {
            <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-         	  <li><a href="https://alexandroshub.github.io/plus.ap.html">Plus</a></li>
 			  <li><a href="https://alexandroshub.github.io/cv">My CV</a></li>
-              <li><a href="https://alexandroshub.github.io/stem">STEAM</a></li>
               <li class="divider"></li>
-              <li class="dropdown-header">Development</li>
-              <li><a href="#">One more separated link</a></li>
+              <li class="dropdown-header">Automations</li>
+              <li><a href="https://alexandroshub.github.io/ardu22.html">Arduino</a></li>
+              <li><a href="https://alexandroshub.github.io/raspberrypi">raspberrypi</a></li>
+              <li><a href="https://alexandroshub.github.io/stem">STEAM</a></li>
             </ul>
           </li>
         
@@ -374,10 +377,54 @@ function closeSearch() {document.getElementById("myOverlay").style.display = "no
 </nav>
 
 <div class="bgimg-1">
+
+
+
+<style>
+.content1 {
+  position: fixed;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
+</style>
+<div class="content1">
+  <h2>Personal website of Pᴀᴘᴀsᴘʏʀᴏᴜ Aʟᴇxᴀɴᴅʀᴏs.</h2>
+<!--  
+   <style>
+hqr { 
+ 
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 4px;
+  width:70%;
+  height:3px;
+  border-width:0;
+  background-image: linear-gradient(to right, rgba(239,140,53),rgb(218,39,73), rgba(189,24,133));
+  border-radius: 25px;} 
+</style>
+
+<hqr></hqr> 
+-->
+  <p>All about IoT, Automations, Robotics, projects with arduino or raspberryPi and more...</p>
+  
+<span class="w3-tag" style="font-size:12px;background-image: linear-gradient(to right, rgba(239,140,53),rgb(218,39,73), rgba(189,24,133)); border-radius: 12px; border: none;  color: white;  text-align: center; text-decoration: none; cursor: pointer; 
+filter: grayscale(1%); padding: 5px 32px;  display: inline-block;  font-size: 16px;  margin: 4px 2px;"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/welcome21.html';"><b>για τη σελίδα</b></a></span>
+
+</div>
+
   <div class="caption">
   <span class="border">
+    WELCOME @ <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
+  <a href="https://alexandroshub.github.io" class="logo" style="font-family: 'Audiowide';font-size: 22px;text-decoration: none;color:white;"> alphaPi</a>
 
-  WELCOME <!--   ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █  -->
+   <!--   ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █  -->
   
   </span>
   </div>
@@ -419,35 +466,7 @@ filter: grayscale(20%);
 
 
 <div class="jumbotron text-center">
-  <h2>Personal website of Pᴀᴘᴀsᴘʏʀᴏᴜ Aʟᴇxᴀɴᴅʀᴏs.</h2> 
   
-  <style>
-hqr { 
- 
-  display: block;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-  margin-left: auto;
-  margin-right: auto;
-  border-style: inset;
-  border-width: 4px;
-  width:70%;
-  height:3px;
-  border-width:0;
-  background-image: linear-gradient(to right, rgba(239,140,53),rgb(218,39,73), rgba(189,24,133));
-  border-radius: 25px;} 
-</style>
-
-<hqr></hqr> 
-   <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
-  <a href="https://alexandroshub.github.io" class="logo" style="font-family: 'Audiowide';font-size: 22px;text-decoration: none;color:white;"> alphaPi</a><br>
-  <p>All about IoT, Automations, Robotics, projects with arduino or raspberryPi and more...</p> 
-
-
-
-<span class="w3-tag" style="font-size:12px;background-image: linear-gradient(to right, rgba(239,140,53),rgb(218,39,73), rgba(189,24,133)); border-radius: 12px; border: none;  color: white;  text-align: center; text-decoration: none; cursor: pointer; 
-filter: grayscale(50%); padding: 5px 32px;  display: inline-block;  font-size: 16px;  margin: 4px 2px;"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/welcome21.html';"><b>για τη σελίδα</b></a></span>
-
 <!--
 <button type="button" class="btn btn-default active" data-toggle="collapse" data-target="#dexo">Γιατί AP ?</button>
   <div id="dexo" class="collapse">
