--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ h3 {
               <li><a href="https://alexandroshub.github.io/stem">STEAM</a></li>
 			  <li class="divider"></li>
               <li class="dropdown-header">Creative Side</li>
-              <li><a href="https://alexandroshub.github.io/ardu22.html">ART gelery</a></li>
+              <li><a href="https://alexandroshub.github.io/art.html">ART gelery</a></li>
               <li><a href="https://alexandroshub.github.io/ardu22.html">Fittnes inspiration</a></li>
             </ul>
           </li>
