--- a/introloading.html
+++ b/introloading.html
@@ -1,81 +1,153 @@
 
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404 on CodePen</title>
+<html lang='en' class=''>
 
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-      html {
-        color-scheme: light dark;
-        font: 110%/1.5 system-ui, sans-serif;
-        background: Canvas;
-        color: CanvasText;
-      }
-      body {
-        height: 100vh;
-        margin: 0;
-        display: grid;
-        place-items: center;
-        padding: 2rem;
-      }
-      main {
-        max-width: 350px;
-      }
-      a {
-        color: #56bbf9;
-      }
-      h1 {
-        margin-block-end: 0.2em;
-      }
-      output {
-        font-size: 90%;
-        opacity: 60%;
-        text-transform: uppercase;
-        letter-spacing: 0.1em;
-      }
-    </style>
-  </head>
+<head>
 
-  <body>
-    <main><h1>404</h1>
+  <meta charset='UTF-8'>
+  <title>CodePen Demo</title>
 
-<output>Page Not Found</output>
+  <meta name="robots" content="noindex">
 
-<p>
-  Unable to render Embed Preview. It's likely that the preview expired, so try
-  refreshing or re-running.
-</p>
+  <link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico">
+  <link rel="mask-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-b4b4269c16397ad2f0f7a01bcdf513a1994f4c94b8af2f191c09eb0d601762b1.svg" color="#111">
+  <link rel="canonical" href="https://codepen.io/argyleink/pen/vEBmZNw">
 
-<ul>
-  <li>
-    <a href="#0" onClick="window.location.reload()">Refresh</a>
-  </li>
-  <li>
-    <a href="/" target="_top" rel="noopener noreferrer">Go to CodePen</a>
-  </li>
-  <li>
-    <a href="/support/" target="_top" rel="noopener noreferrer"
-      >Contact Support</a
-    >
-  </li>
-  <li>
-    <a
-      href="https://blog.codepen.io/documentation/"
-      target="_top"
-      rel="noopener noreferrer"
-      >Visit&nbsp;Documentation</a
-    >
-  </li>
-</ul>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
 
-<script>
-  window && window.parent && window.parent.postMessage('404', '*');
-</script>
-</main>
-  </body>
+  <style id="INLINE_PEN_STYLESHEET_ID">
+    /* 
+  these type the CSS variable as color
+  unlocking the ability for the browser 
+  to animate just that portion
+*/
+@property --＠color-1 {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: hsl(98 100% 62%);
+}
+
+@property --＠color-2 {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: hsl(204 100% 59%);
+}
+
+/* keyframes that change the color variable */
+@-webkit-keyframes gradient-change {
+  to {
+    --＠color-1: hsl(210 100% 59%);
+    --＠color-2: hsl(310 100% 59%);
+  }
+}
+@keyframes gradient-change {
+  to {
+    --＠color-1: hsl(210 100% 59%);
+    --＠color-2: hsl(310 100% 59%);
+  }
+}
+
+article {
+  /* apply variable changes over time */
+  -webkit-animation: gradient-change 2s linear infinite alternate;
+          animation: gradient-change 2s linear infinite alternate;
+  
+  background: linear-gradient(
+    /* 
+      in oklch produces more vibrant gradient results 
+      learn more https://developer.chrome.com/docs/css-ui/access-colors-spaces#color_interpolation
+    */
+    to right in oklch, 
+    /* use the variables in a gradient (or wherever!) */
+    var(--＠color-1), 
+    var(--＠color-2)
+  );
+  
+  /* old browser support */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  
+  /* modern browser version */
+  background-clip: text;
+  color: transparent;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@layer demo.support {
+  h1 {
+    font-size: 10vmin;
+    line-height: 1.1;
+  }
+
+  body {
+    background: hsl(204 100% 5%);
+
+    min-block-size: 100%;
+    box-sizing: border-box;
+    display: grid;
+    place-content: center;
+
+    font-family: system-ui, sans-serif;
+    font-size: min(200%, 4vmin);
+
+    padding: 5vmin;
+  }
+
+  h1, p, body {
+    margin: 0;
+    text-wrap: balance;
+  }
+
+  h1 {
+    line-height: 1.25cap;
+  }
+
+  p {
+    font-family: "Dank Mono", ui-monospace, monospace;
+  }
+
+  html {
+    block-size: 100%;
+  }
+
+  article {
+    display: grid;
+    gap: 1lh;
+    text-align: center;
+  }
+}
+  </style>
+
+  
+<script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-2c7831bb44f98c1391d6a4ffda0e1fd302503391ca806e7fcc7b9b87197aec26.js"></script>
+<script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeConsoleRunner-6d8bf8b4b479137260842506acbb12717dace0823c023e08b96360e60b0840d9.js"></script>
+<script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeRefreshCSS-44fe83e49b63affec96918c9af88c0d80b209a862cf87ac46bc933074b8c557d.js"></script>
+<script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeRuntimeErrors-4f205f2c14e769b448bcf477de2938c681660d5038bc464e3700256713ebe261.js"></script>
+</head>
+
+<body>
+  <article>
+  <h1>Alpha Pi</h1>
+    <h3>from idea to automation (and beyond)</h3>
+      <h4></h4>
+  <p>Connect. Code. Create</p>
+  
+   <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
+  
+</article>
+  
+  
+</body>
+
 </html>
