--- a/ap.contact.html
+++ b/ap.contact.html
@@ -247,7 +247,10 @@
 <a href="tel:+306940548867" style="text-decoration: none;color:white;">Call Me<i class="w3-margin-left fa fa-phone"></i></a><br><br>
 <!-- <a class="w3-button w3-blue" href="skype:live:48c538b11931770b?call">Call Me <i class="fa fa-skype"></i></a><br> -->
 <a href="https://discord.gg/WAnYJjD" style="text-decoration: none;color:white;"><b> Chat on <font color="orange">Discord</font></b></a><br>
-<a href="https://mastodon.social/@alphapi" style="text-decoration: none;color:white;"><b> Chat on <font color="orange">mastodon</font></b></a>
+<a href="https://mastodon.social/@alphapi" style="text-decoration: none;color:white;"><b> Chat on <font color="orange">mastodon</font></b></a><br><br>
+<a href="https://bio.link/alphapi" style="text-decoration: none;color:white;"><b> Find more @ <font color="green">bio.link</font></b></a>
+
+          
         </p>
       </div>
 </center>
