--- a/index.html
+++ b/index.html
@@ -788,6 +788,10 @@ har {
     </div>
     <div id="menu2" class="tab-pane fade">
       <h2>OTR POSTS</h2>
+<rssapp-imageboard id="MfdnGmdyxu1JRg49"></rssapp-imageboard><script src="https://widget.rss.app/v1/imageboard.js" type="text/javascript" async></script>
+
+<rssapp-carousel id="d4sAcPo6xLucQHHW"></rssapp-carousel><script src="https://widget.rss.app/v1/carousel.js" type="text/javascript" async></script>
+
      <!-- 
       
       <button type = ".myButton" type = "submit" name = "ap" value = "ap" onclick="window.location.href='https://ap-otr.tumblr.com/'">
