--- a/iot.html
+++ b/iot.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
    <title>AlexandrosHUB | Automations IoT Programming Technology | Personal website of Papaspyrou Alexandros |</title>
    <link rel="icon" href="https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" type="image/png">
    <head>
-   	  <meta http-equiv="Refresh" content="5;url=https://alexandroshub.github.io/iotHome">
+   	  <meta http-equiv="Refresh" content="10;url=https://alexandroshub.github.io/iotHome">
       <!--  /////// meta information  /////// -->
       <meta charset="UTF-8">
       <meta name="author" content="Alexandros Papaspyrou">
@@ -15,16 +14,84 @@
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!--  /////// end of link and start style css /////// -->
-      <style>
- body,h1,h2,h3,h4,h5,h6 {font-family: Arial, Helvetica,sans-serif}
-         body, html { height: 100%; line-height: 1.8;
-         background-color: #72c494; /* For browsers that do not support gradients */
-         background: linear-gradient(to top right, #19273c 0%,  #72c494 50%,  #19273c 100%)}  
-      </style>
-   </head>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto&display=swap');
+
+    body {
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+      background-image: url(' https://assets.zyrosite.com/m2WpyPejG2Ixvgq9/untitled-2-YBg8ga4R1NcV3k2r.gif '); 
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .overlay {
+      background: rgba(0, 0, 0, 0.6);
+      padding: 50px 70px;
+      border-radius: 16px;
+      text-align: center;
+      animation: fadeIn 2s ease-in-out;
+    }
+
+    h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 3em;
+      margin-bottom: 0.2em;
+      color: #00e0ff;
+    }
+
+    p {
+      font-size: 1.2em;
+      margin-bottom: 1.5em;
+    }
+
+    .btn {
+      background: #00e0ff;
+      color: #000;
+      border: none;
+      padding: 15px 30px;
+      font-size: 1em;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .btn:hover {
+      background: #00bcd4;
+    }
+
+    @keyframes fadeIn {
+      from {opacity: 0;}
+      to {opacity: 1;}
+    }
+
+    @media (max-width: 768px) {
+      .overlay {
+        padding: 30px 20px;
+      }
+
+      h1 {
+        font-size: 2em;
+      }
+    }
+  </style>
+</head>
 <body>
- <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top w3-center"><b>IoT</b></h1><h1>alexandros<b>hub</b>.github.io</h1>
-</div>
+<!--
+https://img.freepik.com/free-vector/abstract-realistic-technology-particle-background_23-2148433468.jpg?semt=ais_items_boosted&w=740
+-->
+  <div class="overlay">
+  <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
+  <a href="https://alexandroshub.github.io" class="logo" style="font-family: 'Audiowide';font-size: 48px;text-decoration: none;color:white;">AlphaPi</a><br>
+  <span class="footer-subtitle">Connect. Code. Create</span><br><br>
+    <h1>Smart IoT Automations</h1>
+    <p>With Arduino, I craft automated environments that respond intelligently to their surroundings.</p>
+    <button class="btn">Let's start</button>
+  </div>
 </body>
 </html>
